--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -13,7 +13,7 @@ logoFile = "icon.png"
 authors = "Wesley1808"
 
 description = '''
-A neoforge mod that fixes certain duping exploits.
+A neoforge mod that aims to fix duplication exploits.
 '''
 
 [[mixins]]
